--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Hotjar</title>
+
+    <!-- Script Hotjar -->
     <script defer>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -14,7 +16,19 @@
             a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
+
+    <!-- Forcer le consentement après le chargement de Hotjar -->
+    <script>
+        window.addEventListener('load', function() {
+            if (window.hj) {
+                hj('consent'); 
+                console.log("Consentement Hotjar activé !");
+            }
+        });
+    </script>
+
 </head>
+
 <body>
     <h1>Bienvenue sur mon test Hotjar</h1>
     <p>Clique sur les boutons ci-dessous pour voir les interactions capturées par Hotjar.</p>
