--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Hotjar</title>
-
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="093795f3-0e2f-4f23-8302-1bff97f59181" data-blockingmode="auto" type="text/javascript"></script>
     <!-- Script Hotjar -->
-    <script defer>
+    <script type="text/javascript">
+    function loadHotjar() {
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
             h._hjSettings={hjid:5294908,hjsv:6};
@@ -15,17 +16,17 @@
             r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
             a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
+    }
 
-    <!-- Forcer le consentement après le chargement de Hotjar -->
-    <script>
-        window.addEventListener('load', function() {
-            if (window.hj) {
-                hj('consent'); 
-                console.log("Consentement Hotjar activé !");
-            }
-        });
-    </script>
+    window.addEventListener("CookiebotOnConsentReady", function() {
+        if (Cookiebot.consents.statistics) {
+            loadHotjar();
+            console.log("Consentement donné : Hotjar activé !");
+        } else {
+            console.log("Consentement refusé : Hotjar désactivé.");
+        }
+    });
+</script>
 
 </head>
 
