--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Hotjar</title>
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="093795f3-0e2f-4f23-8302-1bff97f59181" data-blockingmode="auto" type="text/javascript"></script>
-    <!-- Script Hotjar -->
-    <script type="text/javascript">
+   <script type="text/javascript">
     function loadHotjar() {
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -18,15 +17,17 @@
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     }
 
+    // Écoute l'événement de Cookiebot pour voir si l'utilisateur a accepté les cookies
     window.addEventListener("CookiebotOnConsentReady", function() {
         if (Cookiebot.consents.statistics) {
             loadHotjar();
-            console.log("Consentement donné : Hotjar activé !");
+            console.log("✅ Consentement donné : Hotjar activé !");
         } else {
-            console.log("Consentement refusé : Hotjar désactivé.");
+            console.log("❌ Consentement refusé : Hotjar désactivé.");
         }
     });
 </script>
+
 
 </head>
 
