--- a/index.html
+++ b/index.html
@@ -4,41 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Hotjar</title>
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="093795f3-0e2f-4f23-8302-1bff97f59181" data-blockingmode="auto" type="text/javascript"></script>
-   <script type="text/javascript">
-    function loadHotjar() {
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:5294908,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    }
+    
+    <!-- Script Cookiebot -->
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" 
+        data-cbid="093795f3-0e2f-4f23-8302-1bff97f59181" 
+        data-blockingmode="auto" 
+        type="text/javascript">
+    </script>
 
-    // Vérifier si Cookiebot est bien défini
-    function checkCookiebot() {
-        if (typeof Cookiebot !== "undefined" && typeof Cookiebot.consents !== "undefined") {
-            if (Cookiebot.consents.statistics) {
-                loadHotjar();
-                console.log("✅ Consentement donné : Hotjar activé !");
-            } else {
-                console.log("❌ Consentement refusé : Hotjar désactivé.");
-            }
-        } else {
-            console.log("⚠️ Cookiebot non encore chargé, re-vérification dans 500ms...");
-            setTimeout(checkCookiebot, 500);
+    <script type="text/javascript">
+        function loadHotjar() {
+            (function(h,o,t,j,a,r){
+                h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+                h._hjSettings={hjid:5294908,hjsv:6};
+                a=o.getElementsByTagName('head')[0];
+                r=o.createElement('script');r.async=1;
+                r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+                a.appendChild(r);
+            })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
         }
-    }
 
-    // Attendre que Cookiebot soit prêt
-    window.addEventListener("CookiebotOnConsentReady", checkCookiebot);
-</script>
+        function checkConsent() {
+            try {
+                if (window.Cookiebot && Cookiebot.consents && typeof Cookiebot.consents.statistics !== "undefined") {
+                    if (Cookiebot.consents.statistics) {
+                        loadHotjar();
+                        console.log("✅ Consentement donné : Hotjar activé !");
+                    } else {
+                        console.log("❌ Consentement refusé : Hotjar désactivé.");
+                    }
+                } else {
+                    console.log("⚠️ Cookiebot pas encore prêt, re-vérification dans 500ms...");
+                    setTimeout(checkConsent, 500);
+                }
+            } catch (error) {
+                console.error("⚠️ Erreur dans la vérification du consentement Cookiebot :", error);
+                setTimeout(checkConsent, 500);
+            }
+        }
 
-
+        // Exécuter la vérification après chargement de Cookiebot
+        window.addEventListener("CookiebotOnConsentReady", checkConsent);
+        setTimeout(checkConsent, 1000); // Vérification manuelle après 1s si besoin
+    </script>
 </head>
-
 <body>
     <h1>Bienvenue sur mon test Hotjar</h1>
     <p>Clique sur les boutons ci-dessous pour voir les interactions capturées par Hotjar.</p>
