--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Test Hotjar</title>
     
     <!-- Script Cookiebot -->
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" 
-        data-cbid="093795f3-0e2f-4f23-8302-1bff97f59181" 
-        data-blockingmode="auto" 
-        type="text/javascript">
-    </script>
+    <script id="CookieDeclaration" src="https://consent.cookiebot.com/093795f3-0e2f-4f23-8302-1bff97f59181/cd.js" type="text/javascript" async></script>
 
     <script type="text/javascript">
         function loadHotjar() {
